--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -42,6 +42,11 @@
   padding-left: 50px;
 }
 
+.userMiniDiv{
+  float:right;
+  margin-right: 50px;
+}
+
 .logo-box{
   text-align: center;
   padding-top: 10px;
